Fix tables in dark mode

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -359,7 +359,7 @@ tr.centered {
 }
 
 .dark table, .dark th, .dark td {
-    border: 1px solid #ccc;
+    border-color: #ddd;
 }
 
 .page-content {
